@startuml
'https://plantuml.com/class-diagram

class Teacher {
- id : Long
- name : String
- user : User
}

class Workshop {
- id : Long
- dtStart : LocalDateTime
- duration : Integer
- room : String
- category : String
- title : String
- description : String
- minGradeYear : Integer
- maxGradeYear : Integer
- minParticipants : Integer
- maxParticipants : Integer
- dtReservationsStart : LocalDateTime
- dtReservationsEnd : LocalDateTime
- teacher : Teacher
- creator : Teacher
}

class Student {
- id : Long
- gender : Char
- name : String
- gradeYear : Integer
- className : String
- mentor : Teacher
- reservations : Reservation
- bookings : Booking
- user : User
}

class Reservation {
- id : Long
- student : Student
- workshop : Workshop
- priority : Integer
- dtReserved : LocalDateTime
- dtCancelled : LocalDateTime
- dtProcessed : LocalDateTime
}

class Booking {
- id : Long
- student : Student
- workshop : Workshop
- attended : Boolean
- feedback : String
- dtBooked : LocalDateTime
}

class User {
- id : Long
- username : String
- password : String
- teacherId : Long
- studentId : Long
}

class Role {
- role_id : Long
- name : String
}

Teacher " 2  " --> " 0..* " Workshop
Student " *  " --> "1 " Teacher : mentor
Student " 1 " <---> " 0..* " Reservation : can make
Student " 1" <---> "0..* " Booking : can have

Workshop " 1    " <-- " *" Reservation
Workshop " 1  " <-- " *    " Booking

User "*" <--> "*" Role
@enduml